--- a/pages/myWallet/myWallet.wxss
+++ b/pages/myWallet/myWallet.wxss
@@ -1,83 +1,226 @@
 /* pages/myWallet/myWallet.wxss */
 
-
 .title-alert-view {
-    background-color: #FFE4E6;
-    color: #FE3144;
-    padding:20rpx 20rpx;
-    font-size: 27rpx;
-    line-height:130%;
+  background-color: #ffe4e6;
+  color: #fe3144;
+  padding: 20rpx 20rpx;
+  font-size: 27rpx;
+  line-height: 130%;
 }
+
 .title-alert-view image {
-    width:40rpx;
-    height:40rpx;
-    margin-top:10rpx;
-    margin-right: 10rpx;
+  width: 40rpx;
+  height: 40rpx;
+  margin-top: 10rpx;
+  margin-right: 10rpx;
 }
+
 .my-price-item {
-    text-align:center;
-    padding:50rpx 0;
-    background-color:white;
-    border-bottom:1px #e8e8e8 solid;
-    font-size: 32rpx;
+  padding-left: 35%;
+  padding-top: 50rpx;
+  padding-bottom: 80rpx;
+  background-color: white;
+  border-bottom: 1px #e8e8e8 solid;
+  font-size: 32rpx;
 }
-.my-price-item .hnb text{
-    font-size:55rpx;
-    font-weight:500;
-    margin-right:5rpx;
+
+.my-price-item .hnb {
+  display: inline-block;
 }
+
 .my-price-item .hnb-address {
-    color:#333333;
-    font-size:30rpx;
-    padding-top:10px;
+  color: #333;
+  font-size: 30rpx;
+  padding-top: 10px;
 }
+
 .price-item-view {
-    padding:10rpx;
-    text-align:center;
-    background-color: white;
+  padding: 10rpx;
+  text-align: center;
+  background-color: white;
 }
+
 .price-item-view .title {
-    text-align:left;
-    padding:20rpx;
-    font-size:35rpx;
-    color:#999999;
+  text-align: left;
+  padding: 20rpx;
+  font-size: 35rpx;
+  color: #999;
 }
+
 .price-item {
-    border:2rpx #FE2B40 solid;
-    text-align:center;
-    display:inline-block;
-    margin:10rpx;
-    border-radius:5rpx;
-    line-height:124%;
-    padding:20rpx 0;
+  border: 2rpx #fe2b40 solid;
+  text-align: center;
+  display: inline-block;
+  margin: 10rpx;
+  border-radius: 5rpx;
+  line-height: 124%;
+  padding: 20rpx 0;
 }
+
 .price-active {
-    background-color: #FE2B40;
+  background-color: #fe2b40;
 }
+
 .price-item .bigTxt {
-    color: #FE2B40;
+  color: #fe2b40;
 }
+
 .txt-active {
-    color: #fff;
+  color: #fff;
 }
+
 .price-item .litTxt {
-    color: #FEA9AF;
-    font-size: 30rpx;
+  color: #fea9af;
+  font-size: 30rpx;
 }
+
 .price-item-view .comft-btn {
-    padding: 20rpx;
-    margin: 60rpx 20rpx;
-    background-color: #FE2B40;
-    border-radius: 5rpx;
-    color: white;
-    font-size: 35rpx;
+  padding: 20rpx;
+  margin: 60rpx 20rpx;
+  background-color: #fe2b40;
+  border-radius: 5rpx;
+  color: white;
+  font-size: 35rpx;
 }
+
 .remind-txt-view {
-    padding:10rpx 20rpx;
-    color:#999;
-    font-size:27rpx;
-    text-align: left;
+  padding: 10rpx 20rpx;
+  color: #999;
+  font-size: 27rpx;
+  text-align: left;
 }
+
 .remind-txt-view view {
-    margin-bottom: 30rpx;
+  margin-bottom: 30rpx;
+}
+
+.show-btn {
+  margin-top: 100rpx;
+  color: #2c2;
+}
+
+.modal-mask {
+  width: 100%;
+  height: 100%;
+  position: fixed;
+  top: 0;
+  left: 0;
+  background: #000;
+  opacity: 0.5;
+  overflow: hidden;
+  z-index: 9000;
+  color: #fff;
+}
+
+.modal-dialog {
+  width: 540rpx;
+  overflow: hidden;
+  position: fixed;
+  top: 50%;
+  left: 0;
+  z-index: 9999;
+  background: #f9f9f9;
+  margin: -180rpx 105rpx;
+  border-radius: 36rpx;
+}
+
+.modal-title {
+  padding-top: 50rpx;
+  font-size: 36rpx;
+  color: #030303;
+  text-align: center;
+}
+
+.modal-content {
+  padding: 20rpx 50rpx;
+}
+
+.modal-input {
+  display: flex;
+  background: #fff;
+  border: 2rpx solid #ddd;
+  border-radius: 4rpx;
+  font-size: 28rpx;
+}
+
+.input {
+  width: 100%;
+  height: 160rpx;
+  font-size: 28rpx;
+  color: #333;
+}
+
+input-holder {
+  color: #666;
+  font-size: 28rpx;
+}
+
+.modal-footer {
+  flex-direction: row;
+  height: 66rpx;
+  font-size: 34rpx;
+  line-height: 66rpx;
+  margin-bottom: 40rpx;
+}
+
+.btn-cancel {
+  color: #666;
+  text-align: center;
+  background: #ccc;
+  border-radius: 10rpx;
+  width: 160rpx;
+  display: inline-block;
+  margin-left: 80rpx;
+}
+
+.btn-confirm {
+  color: #fff;
+  text-align: center;
+  background: #fe2b40;
+  border-radius: 10rpx;
+  width: 160rpx;
+  display: inline-block;
+  margin-left: 60rpx;
+}
+
+
+.my-price-item button {
+  display: inline-block;
+  color: white;
+  font-size: 24rpx;
+  width: 160rpx;
+  background: #fe2a40;
+  margin-left: 40rpx;
+  vertical-align: middle;
+}
+
+.hnb .titile {
+  font-size: 36rpx;
+  font-weight: 600;
+}
+
+.hnb .money {
+  font-size: 55rpx;
+  margin-right: 20rpx;
+}
+.moneyTitle{
+  font-size: 36rpx;
+  margin-right: 30rpx;
+}
+.moneyAddress{
+ font-size: 26rpx;
+}
+.moneyInput{
+  display:inline-block;
+  width: 300rpx;
+  height: 26rpx;
+  line-height: 26rpx;
+  padding-left: 10rpx;
+  border-radius: 10rpx;
+  font-size: 26rpx;
+}
+.hnb-coin{
+  font-size: 28rpx;
+  color: red;
+  margin-top: 10rpx
 }
